# kalshi-starter-code-python

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CODE_AUDIT_CHECKLIST.md  CODE_QUALITY_AUDIT.md  GEMINI.md  Makefile  NOTICE  PROGRESS.md  PROMPT.md  README.md  TECHNICAL_DEBT.md  alembic.ini  backwards-compatibility.md  bloat.md  clients.py  deepresearch.md  friction.md  hacks.md  main.py  mkdocs.yml  pyproject.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  docs.yml  fixture-drift-canary.yml  live-api.yml
alembic/: env.py
alembic/versions/: 43e7135752b1_add_portfolio_tables.py  57607a2deee0_make_liquidity_column_nullable_for_.py  72eaf245a5d1_add_portfolio_settlements_table.py  7f0c2b3a1d9e_change_positions_thesis_id_to_string.py  890030df7b2c_add_news_tables.py  9e54540e9c31_drop_price_snapshots_liquidity.py  cbbf8e286441_add_fts5_search_indexes.py  d4dfdc646da1_initial.py
data/: README.md
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  PYTHON_API.md  QUICKSTART.md  README.md  TESTING.md  USAGE.md  index.md
docs/_TODO/: MISSING_FEATURES.md  README.md  REMAINING-WORK.md
docs/_archive/: README.md
docs/_bugs/: AUDIT_REPORT.md  BUG-001-missing-scan-cli-command.md  BUG-002-missing-alembic-configuration.md  BUG-003-missing-notebooks-directory.md  BUG-004-missing-analysis-modules.md  BUG-005-missing-research-modules.md  BUG-006-missing-alerts-system.md  BUG-007-cicd-test-failures.md  BUG-008-inconsistent-test-structure.md  BUG-009-incomplete-cli-commands.md  BUG-010-missing-portfolio-link.md  BUG-011-api-limit-exceeds-max.md  BUG-012-missing-market-status-enum.md  BUG-014-cli-analysis-calibration-broken.md  BUG-015-scan-movers-timezone-crash.md  BUG-016-data-snapshot-missing-init.md  BUG-017-event-model-mismatch.md  BUG-018-api-client-type-safety.md  BUG-019-portfolio-sync-incomplete.md  BUG-020-visualization-type-ignores.md  BUG-021-broad-exception-handling.md  BUG-022-potential-n-plus-one-queries.md  BUG-024-legacy-client-missing-timeouts.md  BUG-025-portfolio-positions-missing-cost-basis.md  BUG-026-data-snapshot-foreign-key-failure.md  BUG-027-pagination-cap-silently-truncates-data.md  BUG-028-alerts-monitor-once-flag-ignored.md  BUG-029-scan-close-race-returns-illiquid-junk.md  BUG-030-scan-arbitrage-inverse-sum-false-positives.md  BUG-032-scan-arbitrage-tickers-limit-silent.md  BUG-033-market-model-api-schema-mismatch.md  BUG-033-portfolio-positions-hides-zero-price.md  BUG-035-scan-and-snapshot-missing-max-pages.md  BUG-036-analysis-metrics-spread-truthiness.md  BUG-040-alembic-fileconfig-disables-existing-loggers.md  BUG-045-legacy-websocket-client-uses-print.md  BUG-047-portfolio-positions-sync.md  BUG-048-negative-liquidity-validation.md  BUG-049-rate-limit-asymmetry.md  BUG-050-silent-exception-alerts.md  (+28 more)
docs/_debt/: CODE_AUDIT_CHECKLIST.md  DEBT-001-api-client-typing.md  DEBT-002-magic-numbers-analysis.md  DEBT-003-loose-db-transactions.md  DEBT-004-settlement-timestamp-proxy.md  DEBT-007-a-plus-engineering-robustness-delta.md  DEBT-008-dead-code-cleanup.md  DEBT-009-finish-halfway-implementations.md  DEBT-010-reduce-boilerplate.md  DEBT-014-friction-residuals.md  DEBT-015-missing-api-endpoints.md  DEBT-016-fixture-drift-ci.md  DEBT-017-model-architecture-cleanup.md  DEBT-018-test-ssot-stabilization.md  DEBT-019-exa-empty-publisheddate-validation.md  DEBT-020-kalshi-market-discovery-gaps.md  DEBT-021-api-coverage-audit-2026-01-13.md  DEBT-023-production-maturity-gaps.md  DEBT-024-cli-exit-code-policy.md  DEBT-025-subpenny-pricing-strategy.md  DEBT-026-missing-function-docstrings.md  DEBT-027-private-function-docstrings.md  DEBT-028-api-schema-drift-jan-2026.md  DEBT-029-settlement-synthetic-fill-reconciliation.md  DEBT-030-trading-fees-from-settlements.md  DEBT-031-floor-division-statistics.md  DEBT-032-midpoint-rounding-inconsistency.md  DEBT-033-frozen-model-setattr-hack.md  DEBT-034-broad-exception-catches.md  DEBT-035-missing-agent-integration-tests.md  DEBT-036-deep-research-timeout-hardcoded.md  DEBT-037-mock-synthesizer-production-gap.md  DEBT-038-orchestrator-escalation-not-implemented.md  DEBT-039-broad-exception-catches.md  DEBT-043-srp-god-files.md  (+18 more)
notebooks/: 01_exploration.ipynb  02_calibration.ipynb  03_edge_detection.ipynb
scripts/: check_fixture_freshness.py  check_mock_drift.py  ralph-loop.sh  record_api_responses.py  record_exa_responses.py  record_exa_websets_responses.py  sanitize_golden_fixtures.py  validate_models_against_golden.py
tests/: __init__.py  conftest.py  golden_fixtures.py
(+720 files in other folders)
