[project]
name = "kalshi-research"
version = "0.1.0"
description = "Research platform for Kalshi prediction market analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "The-Obstacle-Is-The-Way" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=46.0.0",
    "websockets>=15.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "tenacity>=9.1.0",
    "structlog>=25.0.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "duckdb>=1.4.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "respx>=0.22.0",
    "polyfactory>=3.0.0",
    "hypothesis>=6.122.0",
]
research = [
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]
all = ["kalshi-research[dev,research]"]

[project.scripts]
kalshi = "kalshi_research.cli:app"

[project.urls]
Repository = "https://github.com/The-Obstacle-Is-The-Way/kalshi-starter-code-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_research"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "TC",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415", "ERA001", "ARG001", "ARG002"]  # Allow imports inside fixtures, test code patterns
"src/kalshi_research/cli/*.py" = ["PLC0415"]  # Allow lazy imports in CLI for faster startup
"src/kalshi_research/api/auth.py" = ["PLC0415"]  # Allow lazy import to prevent circular imports
"src/kalshi_research/api/models/*.py" = ["TC003"]  # Pydantic models need datetime at runtime
"src/kalshi_research/exa/models/*.py" = ["TC001", "TC003"]  # Pydantic models need runtime imports
"src/kalshi_research/execution/models.py" = ["TC001", "TC003"]  # Pydantic models need runtime imports
"src/kalshi_research/data/export.py" = ["PLC0415"]  # DuckDB is optional, lazy import
"src/kalshi_research/data/repositories/*.py" = ["PLC0415", "TC003"]  # Lazy sqlalchemy imports and datetime
"src/kalshi_research/research/notebook_utils.py" = ["TC001", "PLC0415", "E501"]  # Notebook utils need runtime imports, HTML strings
"src/kalshi_research/research/backtest.py" = ["TC001", "TC003", "SIM108", "B905"]  # Type-checking imports, acceptable patterns for clarity
"notebooks/**/*.ipynb" = ["ERA001", "F401", "E501", "I001"]  # Notebooks are templates/examples

[tool.ruff.lint.isort]
known-first-party = ["kalshi_research"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["websockets.*", "respx.*", "scipy.*", "matplotlib.*", "pandas.*", "duckdb.*", "aiosqlite.*", "nest_asyncio", "IPython.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["kalshi_research.research.notebook_utils"]
disable_error_code = ["no-untyped-call", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires API keys)",
    "e2e: End-to-end tests (full pipelines)",
    "slow: Slow tests (>5s)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/kalshi_research"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
